# xmrig-android

./: .gitignore  BINARIES.md  BUILDING.md  BUILDING_zh-TW.md  CLAUDE.md  COMPLETION.md  CONTRIBUTING.md  CPU_MONITORING_FIX.md  DEV_FEE.md  DONATE_SETUP_COMPLETE.md  FINAL_REPORT.md  LICENSE  MODERN_ARCHITECTURE.md  PHASE2_COMPLETE.md  PLATFORMS.md  README.md  README_zh-TW.md  SECURITY.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: config_template.json  pools.json
app/src/main/cpp/: native-bridge.cpp
app/src/main/java/com/iml1s/xmrigminer/: XMRigApplication.kt
app/src/main/java/com/iml1s/xmrigminer/data/model/: MiningConfig.kt  MiningState.kt  MiningStats.kt  Pool.kt
app/src/main/java/com/iml1s/xmrigminer/data/repository/: ConfigRepository.kt  PoolRepository.kt  StatsRepository.kt
app/src/main/java/com/iml1s/xmrigminer/di/: AppModule.kt
app/src/main/java/com/iml1s/xmrigminer/native/: XMRigBridge.kt
app/src/main/java/com/iml1s/xmrigminer/presentation/: MainActivity.kt
app/src/main/java/com/iml1s/xmrigminer/service/: DevFeeManager.kt  MiningWorker.kt  MonitorWorker.kt
app/src/main/java/com/iml1s/xmrigminer/util/: CpuMonitor.kt  NetworkMonitor.kt  NotificationHelper.kt
app/src/main/res/drawable/: ic_mining.xml
app/src/main/res/mipmap-xxxhdpi/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs  miner.rs
(+65 files in other folders)
